feat: Agrega datos iniciales para todos los modelos usando DataInitializer